--- a/SuperPopToday/Base.lproj/MainInterface.storyboard
+++ b/SuperPopToday/Base.lproj/MainInterface.storyboard
@@ -22,8 +22,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="110"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="100个帐号" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4Eo-Ab-SJy">
-                                <rect key="frame" x="26" y="10" width="118.5" height="36"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="请添加帐号" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4Eo-Ab-SJy">
+                                <rect key="frame" x="26" y="10" width="127" height="36"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="36" id="y3j-or-Ttv"/>
                                 </constraints>
