--- a/SuperPopToday/Base.lproj/MainInterface.storyboard
+++ b/SuperPopToday/Base.lproj/MainInterface.storyboard
@@ -6,7 +6,6 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12086"/>
-        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -44,6 +43,10 @@
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tEt-se-b76">
                                 <rect key="frame" x="26" y="46" width="254" height="54"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="54" id="1dd-q8-hvM"/>
+                                    <constraint firstAttribute="width" constant="254" id="MJj-a3-Iv4"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                 <color key="textColor" red="0.20000000300000001" green="0.20000000300000001" blue="0.20000000300000001" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
@@ -59,7 +62,7 @@
                             <constraint firstItem="tMT-mK-quZ" firstAttribute="leading" secondItem="tEt-se-b76" secondAttribute="trailing" constant="15" id="8uM-YG-XkL"/>
                             <constraint firstItem="FKl-LY-JtV" firstAttribute="top" secondItem="tEt-se-b76" secondAttribute="bottom" constant="10" id="8yr-Ws-rwn"/>
                             <constraint firstItem="tEt-se-b76" firstAttribute="top" secondItem="4Eo-Ab-SJy" secondAttribute="bottom" id="9fG-xp-UNN"/>
-                            <constraint firstItem="4Eo-Ab-SJy" firstAttribute="leading" secondItem="S3S-Oj-5AN" secondAttribute="leadingMargin" constant="10" id="9nT-kP-nLn"/>
+                            <constraint firstItem="4Eo-Ab-SJy" firstAttribute="leading" secondItem="S3S-Oj-5AN" secondAttribute="leading" constant="26" id="QT0-dg-kFn"/>
                             <constraint firstItem="tEt-se-b76" firstAttribute="leading" secondItem="S3S-Oj-5AN" secondAttribute="leading" constant="26" id="a0W-70-hPF"/>
                             <constraint firstItem="Y2h-UY-ozc" firstAttribute="centerY" secondItem="tMT-mK-quZ" secondAttribute="centerY" id="nCZ-Qf-dnq"/>
                             <constraint firstItem="tMT-mK-quZ" firstAttribute="centerY" secondItem="S3S-Oj-5AN" secondAttribute="centerY" id="ozp-3P-JHn"/>
